Fix invisible first record in autocomplete

--- a/_custom.scss
+++ b/_custom.scss
@@ -104,7 +104,7 @@ body.home{
   }
 
   &.founded{
-    top: 100px !important;
+    top: 143px !important;
     transition: top 0.2s linear;
   }
 }
